--- a/about_us.html
+++ b/about_us.html
@@ -36,7 +36,8 @@
               class="fa fa-ticket-alt ticket-icon"></span></button>
         </div>
         <div class="modal" id="ticket-modal">
-          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i class="fas fa-times-circle close-icon"></i>
+          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i
+              class="fas fa-times-circle close-icon"></i>
           </div>
           <div class="modal-body">
             <p class="modal-text">
@@ -210,7 +211,7 @@
         <section class="newsletter-section">
           <label class="newsletter-label" for="newsletter">
             Sign up to our <em>newsletter</em> and be the first to know about our
-            exciting <em>new stuff</em>:
+            exciting new stuff:
           </label>
           <div class="newsletter-success">
             Welcome! Please check your inbox
