--- a/get_involved.html
+++ b/get_involved.html
@@ -169,7 +169,7 @@
         <section class="newsletter-section">
           <label class="newsletter-label" for="newsletter">
             Sign up to our <em>newsletter</em> and be the first to know about our
-            exciting <em>new stuff</em>:
+            exciting new stuff:
           </label>
           <div class="newsletter-success">
             Welcome! Please check your inbox
