--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           <div class="logo">
             <img src="images/cms-logo-new.png" alt="Community Science Museum logo" />
           </div>
-          <span class="logo-text">CSM</span>
+          <span class="logo-text">Community Science Museum</span>
+          <span class="logo-text-mobile">CSM</span>
         </a>
         <div class="header-content-wrapper">
           <div class="time-wrapper">
@@ -107,7 +108,8 @@
       <div class="hero-container">
         <div class="hero-content">
           <hgroup>
-            <h1 class="hero-heading">WELCOME to our science museum!</h1>
+            <h1 class="hero-heading"><strong class="hero-heading-bold">WELCOME</strong> to our <span
+                class="hero-heading-bold">science museum!</span></h1>
             <h2 class="hero-sub-heading">— The place where science comes to life</h2>
           </hgroup>
           <a href="https://www.ticketmaster.com/" class="button hero-button">
@@ -318,7 +320,7 @@
         <section class="newsletter-section">
           <label class="newsletter-label" for="newsletter">
             Sign up to our <em>newsletter</em> and be the first to know about our
-            exciting <em>new stuff</em>:
+            exciting new stuff:
           </label>
           <div class="newsletter-success">
             Welcome! Please check your inbox
