--- a/about_us.html
+++ b/about_us.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>
     Community Science Museum - Bergen: | Science brought to life and made
@@ -15,7 +14,6 @@
   <link rel="stylesheet" href="styles/about_us.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
-
 <body>
   <div class="fading-background"></div>
   <div class="flex-wrapper">
@@ -25,7 +23,8 @@
           <div class="logo">
             <img src="images/cms-logo-new.png" alt="Community Science Museum logo" />
           </div>
-          <span class="logo-text">CSM</span>
+          <span class="logo-text">Community Science Museum</span>
+          <span class="logo-text-mobile">CSM</span>
         </a>
         <div class="header-content-wrapper">
           <div class="time-wrapper">
@@ -99,20 +98,15 @@
         </div>
       </nav>
     </header>
-
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-
-          <!-- <h2 class="main-sub-heading sub-heading-box">— Let us explore together
-          </h2> -->
           <section>
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
                 <h1 class="main-heading">About us</h1>
               </div>
-              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Let us explore together. Come join us at the Community Science Museum where
                 we’re committed
                 to making science accessible to all.</p>
@@ -168,7 +162,6 @@
                 <div class="main-heading-left"></div>
                 <h2 class="main-heading">Meet our passionate tour guides</h2>
               </div>
-              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— We hope to see you soon
               </p>
             </div>
@@ -203,7 +196,6 @@
                 <figcaption>ALBERT</figcaption>
               </figure>
             </div>
-
           </section>
         </div>
       </div>
@@ -217,7 +209,6 @@
             Welcome! Please check your inbox
           </div>
           <form class="newsletter-form">
-            <!-- <label for="newsletter-input">E-mail</label> -->
             <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
             <button class="button" id="sign-up-button" type="submit" name="subscribe">Sign up</button>
             <p id="newsletter-error" class="error-message">
@@ -298,5 +289,4 @@
   </footer>
   <script src="js/in_common.js"></script>
 </body>
-
 </html>
