--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>
     Community Science Museum - Bergen: Our museums contact Page and FAQ
@@ -14,7 +13,6 @@
   <link rel="stylesheet" href="styles/contact.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
-
 <body>
   <div class="fading-background"></div>
   <div class="flex-wrapper">
@@ -24,7 +22,8 @@
           <div class="logo">
             <img src="images/cms-logo-new.png" alt="Community Science Museum logo" />
           </div>
-          <span class="logo-text">CSM</span>
+          <span class="logo-text">Community Science Museum</span>
+          <span class="logo-text-mobile">CSM</span>
         </a>
         <div class="header-content-wrapper">
           <div class="time-wrapper">
@@ -98,23 +97,15 @@
         </div>
       </nav>
     </header>
-
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <!-- <div class="main-heading-wrapper">
-            <div class="main-heading-left"></div>
-            <h1 class="main-heading">Contact & FAQ</h1>
-          </div>
-          <h2 class="main-sub-heading">— If you need to get in touch with us, please use this form
-          </h2> -->
           <section id="contact-section">
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
                 <h1 class="main-heading">Contact</h1>
               </div>
-              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Please submit your inquiry, and we will get back to you as soon as
                 possible</p>
             </div>
@@ -170,7 +161,6 @@
                 <div class="main-heading-left"></div>
                 <h2 class="main-heading">FAQ</h2>
               </div>
-              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Commonly asked questions about our museum</p>
             </div>
             <ol class="faq">
@@ -223,7 +213,6 @@
             Welcome! Please check your inbox
           </div>
           <form class="newsletter-form">
-            <!-- <label for="newsletter-input">E-mail</label> -->
             <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
             <button class="button" id="sign-up-button" type="submit" name="subscribe">Sign up</button>
             <p id="newsletter-error" class="error-message">
@@ -305,5 +294,4 @@
   <script src="js/in_common.js"></script>
   <script src="js/contact.js"></script>
 </body>
-
 </html>
