--- a/exhibitions.html
+++ b/exhibitions.html
@@ -26,7 +26,8 @@
           <div class="logo">
             <img src="images/cms-logo-new.png" alt="Community Science Museum logo" />
           </div>
-          <span class="logo-text">CSM</span>
+          <span class="logo-text">Community Science Museum</span>
+          <span class="logo-text-mobile">CSM</span>
         </a>
         <div class="header-content-wrapper">
           <div class="time-wrapper">
@@ -37,7 +38,8 @@
               class="fa fa-ticket-alt ticket-icon"></span></button>
         </div>
         <div class="modal" id="ticket-modal">
-          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i class="fas fa-times-circle close-icon"></i>
+          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i
+              class="fas fa-times-circle close-icon"></i>
           </div>
           <div class="modal-body">
             <p class="modal-text">
@@ -99,7 +101,6 @@
         </div>
       </nav>
     </header>
-
     <main>
       <div class="main-wrapper">
         <div class="content-container">
@@ -109,7 +110,6 @@
                 <div class="main-heading-left"></div>
                 <h1 class="main-heading">Exhibition spaces</h1>
               </div>
-              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Our more than 1000 unique exhibitions are dived into 5 main
                 spaces for you to explore</p>
             </div>
@@ -251,7 +251,6 @@
                 <div class="main-heading-left"></div>
                 <h2 class="main-heading">More to explore</h2>
               </div>
-              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Come visit us and continue your exploration</p>
             </div>
             <div class="gallery-wrapper">
@@ -277,7 +276,6 @@
                 <img src="../images/gallery-6.jpg" alt="a kid with virtual reality headset" />
               </figure>
             </div>
-            <!-- <p class="gallery-quote">"More than 1000 unique exhibits to explore"</p> -->
           </section>
         </div>
       </div>
@@ -292,7 +290,6 @@
         Welcome! Please check your inbox
       </div>
       <form class="newsletter-form">
-        <!-- <label for="newsletter-input">E-mail</label> -->
         <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
         <button class="button" id="sign-up-button" type="submit" name="subscribe">Sign up</button>
         <p id="newsletter-error" class="error-message">
