--- a/get_involved.html
+++ b/get_involved.html
@@ -25,7 +25,8 @@
           <div class="logo">
             <img src="images/cms-logo-new.png" alt="Community Science Museum logo" />
           </div>
-          <span class="logo-text">CSM</span>
+          <span class="logo-text">Community Science Museum</span>
+          <span class="logo-text-mobile">CSM</span>
         </a>
         <div class="header-content-wrapper">
           <div class="time-wrapper">
@@ -36,7 +37,8 @@
               class="fa fa-ticket-alt ticket-icon"></span></button>
         </div>
         <div class="modal" id="ticket-modal">
-          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i class="fas fa-times-circle close-icon"></i>
+          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i
+              class="fas fa-times-circle close-icon"></i>
           </div>
           <div class="modal-body">
             <p class="modal-text">
@@ -98,11 +100,9 @@
         </div>
       </nav>
     </header>
-
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-
           <section>
             <div class="header">
               <div class="main-heading-wrapper">
@@ -162,7 +162,6 @@
               </div>
             </div>
           </section>
-
         </div>
       </div>
       <div class="newsletter-wrapper">
@@ -175,7 +174,6 @@
             Welcome! Please check your inbox
           </div>
           <form class="newsletter-form">
-            <!-- <label for="newsletter-input">E-mail</label> -->
             <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
             <button class="button" id="sign-up-button" type="submit" name="subscribe">Sign up</button>
             <p id="newsletter-error" class="error-message">
