--- a/visit.html
+++ b/visit.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>
     Community Science Museum - Bergen: Everything you need to know if you
@@ -17,7 +16,6 @@
   <link rel="stylesheet" href="styles/visit.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
-
 <body>
   <div class="fading-background"></div>
   <div class="flex-wrapper">
@@ -27,7 +25,8 @@
           <div class="logo">
             <img src="images/cms-logo-new.png" alt="Community Science Museum logo" />
           </div>
-          <span class="logo-text">CSM</span>
+          <span class="logo-text">Community Science Museum</span>
+          <span class="logo-text-mobile">CSM</span>
         </a>
         <div class="header-content-wrapper">
           <div class="time-wrapper">
@@ -101,7 +100,6 @@
         </div>
       </nav>
     </header>
-
     <main>
       <div class="main-wrapper">
         <div class="content-container">
@@ -114,7 +112,6 @@
                   Admission, location & opening hours
                 </h1>
               </div>
-              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— You will find us right in the heart of Bergen
               </p>
             </div>
@@ -220,7 +217,6 @@
               </div>
             </div>
           </section>
-          <!-- <div id="facilities"></div> -->
           <section id="facilities-section">
             <div class="header">
               <div class="main-heading-wrapper">
@@ -229,10 +225,8 @@
                   Facilities
                 </h2>
               </div>
-              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Our museum offers top modern facilities</p>
             </div>
-
             <div class="facilities-grid">
               <div id="accessibility" class="facilities-container item-1">
                 <div>
@@ -245,7 +239,6 @@
                 </div>
                 <div id="accessibility-img" class="facility-img"></div>
               </div>
-
               <div id="food-drink" class="facilities-container item-2">
                 <div>
                   <h4 class="info-box-heading facilities-heading">Food and Drink</h4>
@@ -256,7 +249,6 @@
                 </div>
                 <div id="food-img" class="facility-img"></div>
               </div>
-
               <div id="shop" class="facilities-container item-3">
                 <div>
                   <h4 class="info-box-heading facilities-heading">Shop</h4>
@@ -268,7 +260,6 @@
                 </div>
                 <div id="shop-img" class="facility-img"></div>
               </div>
-
             </div>
           </section>
         </div>
@@ -283,7 +274,6 @@
             Welcome! Please check your inbox
           </div>
           <form class="newsletter-form">
-            <!-- <label for="newsletter-input">E-mail</label> -->
             <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
             <button class="button" id="sign-up-button" type="submit" name="subscribe">Sign up</button>
             <p id="newsletter-error" class="error-message">
@@ -363,7 +353,5 @@
     </div>
   </footer>
   <script src="js/in_common.js"></script>
-  <!-- <script src="js/index.js"></script> -->
 </body>
-
 </html>
