--- a/explore.html
+++ b/explore.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>
     Community Science Museum - Bergen: Are you a young person looking to learn
@@ -17,7 +16,6 @@
   <link rel="stylesheet" href="styles/explore.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
-
 <body>
   <div class="fading-background"></div>
   <div class="flex-wrapper">
@@ -27,7 +25,8 @@
           <div class="logo">
             <img src="images/cms-logo-new.png" alt="Community Science Museum logo" />
           </div>
-          <span class="logo-text">CSM</span>
+          <span class="logo-text">Community Science Museum</span>
+          <span class="logo-text-mobile">CSM</span>
         </a>
         <div class="header-content-wrapper">
           <div class="time-wrapper">
@@ -101,7 +100,6 @@
         </div>
       </nav>
     </header>
-
     <main>
       <div class="main-wrapper">
         <div class="content-container">
@@ -111,14 +109,11 @@
                 <div class="main-heading-left"></div>
                 <h1 class="main-heading">For kids</h1>
               </div>
-              <!-- <hr class="heading-divider" /> -->
-              <p class="main-heading-lead">— Are you a young person looking to learn more about science?</p>
+              <p class="main-heading-lead">— Are you a young person looking to learn more
+                about science?</p>
             </div>
             <div class="kids-container">
               <div id="image-box-kids"></div>
-              <!-- <figure class="image-box" >
-                <img src="images/museum-1.jpg" />
-              </figure> -->
               <div class="info-box" id="info-box-kids">
                 <p>Come on down to our museum, there’s plenty to see and do</p>
                 <p>
@@ -133,14 +128,11 @@
               </div>
             </div>
           </section>
-
           <section class="clubs-section">
-            <!-- <div id="club-anchor"></div> -->
             <div class="clubs-wrapper">
               <div class="clubs-container">
                 <h3 class="clubs-heading">Join a Children's Club</h3>
               </div>
-              <!-- <hr class="clubs-divider" /> -->
               <div class="clubs-container">
                 <div>
                   <h4 class="club-heading red" id="young-stars-club">Young Stars Club</h4>
@@ -198,7 +190,6 @@
                   </figure>
                 </div>
               </div>
-              <!-- <hr class="clubs-divider" /> -->
               <div class="cta-wrapper" id="clubs-cta-wrapper">
                 <p>Do you want to join one of our clubs?</p>
                 <a href="contact.html" class="button">Get in touch
@@ -206,14 +197,12 @@
               </div>
             </div>
           </section>
-
           <section class="research-section">
             <div class="header">
               <div class="main-heading-wrapper">
                 <div class="main-heading-left"></div>
                 <h2 class="main-heading">Teachers & researchers</h2>
               </div>
-              <!-- <hr class="heading-divider" /> -->
               <p class="main-heading-lead">— Are you a teacher who wants to bring your students, or maybe you are a
                 researcher wanting to collaborate with our museum?</p>
             </div>
@@ -248,16 +237,12 @@
                   the country.
                 </p>
               </div>
-              <!-- <div class="image-box" id="item-6">
-              </div> -->
               <div class="cta-wrapper" id="item-6">
                 <p>Are you a teacher or a researcher?</p>
                 <a href="contact.html" class="button">Get in touch</a>
               </div>
             </div>
-
           </section>
-
         </div>
       </div>
       <div class="newsletter-wrapper">
@@ -270,7 +255,6 @@
             Welcome! Please check your inbox
           </div>
           <form class="newsletter-form">
-            <!-- <label for="newsletter-input">E-mail</label> -->
             <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
             <button class="button" id="sign-up-button" type="submit" name="subscribe">Sign up</button>
             <p id="newsletter-error" class="error-message">
@@ -351,5 +335,4 @@
   </footer>
   <script src="js/in_common.js"></script>
 </body>
-
 </html>
