some design improvements

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>
     Community Science Museum - Bergen: Our museums contact Page and FAQ
@@ -13,6 +14,7 @@
   <link rel="stylesheet" href="styles/contact.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
+
 <body>
   <div class="fading-background"></div>
   <div class="flex-wrapper">
@@ -288,10 +290,12 @@
       </div>
     </div>
     <div class="copyright-container">
-      <span id="copyright">Community Science Museum 2020</span>
+      <i class="far fa-copyright"></i>
+      <span id="copyright">Community Science Museum — 2020</span>
     </div>
   </footer>
   <script src="js/in_common.js"></script>
   <script src="js/contact.js"></script>
 </body>
+
 </html>
