--- a/exhibitions.html
+++ b/exhibitions.html
@@ -365,7 +365,8 @@
       </div>
     </div>
     <div class="copyright-container">
-      <span id="copyright">Community Science Museum 2020</span>
+      <i class="far fa-copyright"></i>
+      <span id="copyright">Community Science Museum — 2020</span>
     </div>
   </footer>
   <script src="js/in_common.js"></script>
