--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>
     Community Science Museum - Bergen: Visit our new interactive science
@@ -17,6 +18,7 @@
   <link rel="stylesheet" href="styles/index.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
+
 <body>
   <div class="fading-background"></div>
   <div class="flex-wrapper">
@@ -385,10 +387,12 @@
       </div>
     </div>
     <div class="copyright-container">
-      <span id="copyright">Community Science Museum 2020</span>
+      <i class="far fa-copyright"></i>
+      <span id="copyright">Community Science Museum — 2020</span>
     </div>
   </footer>
   <script src="js/in_common.js"></script>
   <script src="js/index.js"></script>
 </body>
+
 </html>
