--- a/visit.html
+++ b/visit.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>
     Community Science Museum - Bergen: Everything you need to know if you
@@ -16,6 +17,7 @@
   <link rel="stylesheet" href="styles/visit.css" />
   <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
 </head>
+
 <body>
   <div class="fading-background"></div>
   <div class="flex-wrapper">
@@ -349,9 +351,11 @@
       </div>
     </div>
     <div class="copyright-container">
-      <span id="copyright">Community Science Museum 2020</span>
+      <i class="far fa-copyright"></i>
+      <span id="copyright">Community Science Museum — 2020</span>
     </div>
   </footer>
   <script src="js/in_common.js"></script>
 </body>
+
 </html>
