--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
   <div class="flex-wrapper">
     <header>
       <div class="header-wrapper">
-        <a href="index.html" class="logo-wrapper">
-          <div class="logo">
-            <img src="images/cms-logo-new.png" alt="Community Science Museum logo" />
-          </div>
-          <span class="logo-text">Community Science Museum</span>
-          <span class="logo-text-mobile">CSM</span>
+        <a href="index.html" class="logo logo-large">
+          <img src="images/csm-logo.png" alt="Community Science Museum logo" />
+        </a>
+        <a href="index.html" class="logo-small">
+          <img src="images/csm-logo-small.png" alt="Community Science Museum logo" />
         </a>
         <div class="header-content-wrapper">
           <div class="time-wrapper">
@@ -378,7 +377,7 @@
       <div>
         <h6 class="footer-heading">USEFUL LINKS:</h6>
         <ul class="footer-list footer-links-list">
-          <li><a href="contact.html#contact-section">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
           <li><a href="about_us.html">About Us</a></li>
           <li><a href="visit.html#facilities-section">Facilities</a></li>
           <li><a href="contact.html#faq-section">FAQ</a></li>
