--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://kit.fontawesome.com/fbd3401b24.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.typekit.net/ijy7hen.css">
   <link rel="stylesheet" href="styles/index.css" />
-  <link rel="shortcut icon" type="image" href="images/icons/CSM favicon.png" />
+  <link rel="shortcut icon" type="image" href="images/csm-favicon.png" />
 </head>
 
 <body>
