--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <a href="exhibitions.html#cosmology-space">
               <div class="category-box-content">
                 <figure class="category-planet-icon">
-                  <img src="images/icons/planet_white.png" alt="icon of a planet" class="category-planet-icon" />
+                  <img src="images/icons/planet_white.png" alt="" class="category-planet-icon" />
                 </figure>
                 <figcaption class="category-caption">COSMOLOGY</figcaption>
               </div>
