--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 class="hero-heading-bold">science museum!</span></h1>
             <h2 class="hero-sub-heading">— The place where science comes to life</h2>
           </hgroup>
-          <a href="https://www.ticketmaster.com/" class="button hero-button">
+          <a href="about_us.html" class="button hero-button">
             Learn more
           </a>
         </div>
@@ -207,7 +207,6 @@
                         <img class="slide-image" src="images\t-rex.jpg"
                           alt="Close up photo of the head of a of gaping T-Rex skeleton, exposing all it's razor-sharp teeth" />
                       </figure>
-
                       <div class="slide-body">
                         <h5 class="slide-heading" id="slide-heading-1" #>Night in the Museum</h5>
                         <p>
